fixed alignment of messages
center to middle and also fixed sizing of messages users type

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
 html, body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
@@ -20,12 +19,13 @@ h1 {
 }
 
 .container {
+    padding: 10px;
     display: flex;
     flex-direction: column;
     max-width: 320px;
-    height: 100vh;
+    height: 97vh;
     flex-grow: 1;
-    margin: 25px auto;
+    margin: 0 auto;
     position: relative;
 }
 
@@ -34,28 +34,31 @@ img {
     margin: 0 auto 1em auto;
 }
 
-#input-container {
+#messages-container {
     position: absolute;
-    bottom: 50px;
+    bottom: 10px;
+    left: 0;
 } 
 
-input, .btn {
+textarea, .btn {
     font-family: 'Poppins', sans-serif;
     width: 100%;
-    margin: 10px auto 5px auto;
+    margin: 5px auto;
     font-size: 1.05em;
 }
 
-input {
+textarea {
     height: 75px;
     border-radius: 10px;
+    padding: 10px;
+    width: 320px;
     background: #e8faff;
     color: #505250;
     border: none;
     text-align: center;
 }
 
-input:focus{
+textarea:focus{
     outline: none;
     border: 2px solid #fafafa;
 }
@@ -77,6 +80,10 @@ input:focus{
     font-family: 'Poppins', sans-serif;
     background: #e8faff;
     color: #4685af;
+    max-width: 320px;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
     padding: 10px;
     margin: 10px auto;
     border-radius: 10px;
